--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -41,9 +41,27 @@ body {
 
 /* Classes and IDs - customisations for individual elements/groups of elements */
 
-#header-title {
+#header { /* header image background etc */
+  height: 567px;
+  text-align: center; /* centres ALL text in header including navigation */
+}
+#header-title { /* St. Andrew's Church text at top */
   margin-bottom: 0; /* removes margin that skeleton.css adds to h1; this allows
   other elements to be flush against it */
+}
+
+#footer {
+  text-align: center;
+}
+
+#nav { /* navigation links at top of each page */
+  margin-top: 450px; /* aligns along the bottom of the header, will depend
+  on size of image used */
+  font-size: 1.75rem;
+}
+#nav ul li {
+  margin-left: 20px;
+  display: inline;
 }
 
 .dye { /* for #testing layout pieces, added after column type */
