Further layout sorting
Got sidebar, content, navigation pretty much sorted

--- a/css/style.css
+++ b/css/style.css
@@ -1,76 +1,96 @@
 /* Shortcuts:
+#breakpoints (for mobile breakpoints, tablets too etc)
 #testing (from when creating website, delete these)
 */
 
 /* Basic element customisations - body, font faces, paragraph layout etc */
 
 body {
-  background-color: green;  /* basic colour for layout #testing */
+  background-color: green;                                /* basic colour for layout #testing */
 }
 
 /* Classes and IDs - customisations for individual elements/groups of
 elements */
 
-#header {                   /* header image background etc - set for mobile,
-                            overridden by breakpoints below*/
-  background: url(../images/header.jpg) no-repeat center;
-  height: 197px;
-  text-align: center;       /* centres ALL text in header including
-                            navigation */
-}
-#header-title {             /* St. Andrew's Church text at top */
-  margin-bottom: 0;         /* removes margin that skeleton.css adds to h1; this
-                            allows other elements to be flush against it */
-}
-
-#sidebar {
-  background-color: #587793;
+#content {
+  background: #fff url(../images/sidebar.jpg) repeat-y;   /* shadow for sidebar */
+  min-height: 500px;                                      /* keeps in line with sidebar to maintain illusion of
+                                                          shadow */
+  padding: 0 0 0 2rem;                                    /* keeps text from overlapping shadow */
 }
 
 #footer {
   text-align: center;
 }
 
-#nav {                      /* navigation links at top of each page */
-  margin-top: 450px;        /* aligns along the bottom of the header, will
-                            depend on size of image used */
+#header {                                                 /* header image background etc - set for mobile,
+                                                          overridden by breakpoints below*/
+  background: url(../images/header.jpg) no-repeat center;
+  height: 197px;
+  position: relative;                                     /* allows for absolute positioning of nav within
+                                                          header without taking it out of Skeleton's boxes */
+  text-align: center;                                     /* centres ALL text in header including
+                                                          navigation */
+}
+#header-title {                                           /* St. Andrew's Church text at top */
+  margin-bottom: 0;                                       /* removes margin that skeleton.css adds to h1; this
+                                                          allows other elements to be flush against it */
+}
+
+#nav {                                                    /* navigation links at top of each page */
+  color: #fff;
   font-size: 1.75rem;
+  position: absolute;                                     /* positions inside the relative header to align with
+                                                          bottom of box */
+  bottom: 0;
+}
+#nav ul {
+  margin: 0;                                              /* removes margin so aligns with bottom of box better */
 }
 #nav ul li {
+  display: inline-block;                                  /* wraps with viewport size */
   margin-left: 20px;
-  display: inline;
 }
 
-.dye {                      /* for #testing layout pieces, added after column
-                            type */
-  background-color: orange;
+#sidebar {
+  background: #587793;
+  min-height: 0;                                          /* prevents sidebar from taking up space when
+                                                          horizontal, applies on smallest mobile breakpoint
+                                                          when supported by statements below */
 }
+
+/* #breakpoints */
 
 @media (min-width: 550px) {
-  #header {                   /* resize header for smaller than tablet */
+  #header {                                               /* resize header for smaller than tablet */
     background: url(../images/header-550.jpg) no-repeat center;
     height: 255px;
   }
+  #sidebar {
+    min-height: 500px;                                    /* assures it's always the same min height as content,
+                                                          has to change with breakpoints so when it goes horizontal
+                                                          it doesn't take up loads of space */
+  }
 
-  /* Below needs to be prevented from running when in full screen, hurts margin
-  on right */
-  .eight.columns.nomargin { /* trying to get rid of 4% margin-left in columns
-                            CSS so can have sidebar shadow - need content to be
-                            flush to the sidebar to achieve this so I can put
-                            it in the background of content */
-    margin-left: 0;         /* 4% got rid of! */
-    width: 69.3333333333%;  /* fixes lack of 4% margin left by adding 4% -
-                            breaks on mobile, doesn't line up on right */
+                                                          /* Below needs to be prevented from running when in
+                                                          full screen, hurts margin on right */
+  .eight.columns.nomargin {                               /* trying to get rid of 4% margin-left in columns
+                                                          CSS so can have sidebar shadow - need content to be
+                                                          flush to the sidebar to achieve this so I can put
+                                                          it in the background of content */
+    margin-left: 0;                                       /* 4% got rid of! */
+    width: 69.3333333333%;                                /* fixes lack of 4% margin left by adding 4% -
+                                                          breaks on mobile, doesn't line up on right */
   }
 }
 @media (min-width: 750px) {
-  #header {                   /* resize header for tablet */
+  #header {                                               /* resize header for tablet */
     background: url(../images/header-750.jpg) no-repeat center;
     height: 348px;
   }
 }
 @media (min-width: 1000px) {
-  #header {                   /* resize header for desktop */
+  #header {                                               /* resize header for desktop */
     background: url(../images/header-1000.jpg);
     height: 556px;
   }
