--- a/css/style.css
+++ b/css/style.css
@@ -40,16 +40,23 @@ elements */
 #nav {                                                    /* navigation links at top of each page */
   color: #fff;
   font-size: 1.75rem;
-  position: absolute;                                     /* positions inside the relative header to align with
-                                                          bottom of box */
-  bottom: 0;
+  text-align: center;
+  width: 100%;                                            /* helps with centring navigation */
 }
 #nav ul {
   margin: 0;                                              /* removes margin so aligns with bottom of box better */
 }
 #nav ul li {
-  display: inline-block;                                  /* wraps with viewport size */
-  margin-left: 20px;
+  display: block;                                         /* vertical list on mobile, changed to horizontal below */
+}
+#nav ul li:last-child {
+  margin-right: 0;                                        /* prevents margin from throwing off last list item */
+}
+#nav .centre {
+  display: inline-block;                                  /* somehow causes nav to centre */
+  *display: inline;                                       /* IE7 */
+  *zoom: 1;
+  width: 80%;
 }
 
 #sidebar {
@@ -65,6 +72,13 @@ elements */
   #header {                                               /* resize header for smaller than tablet */
     background: url(../images/header-550.jpg) no-repeat center;
     height: 255px;
+  }
+  #nav ul li {
+    display: inline-block;                                /* wraps with viewport size */
+    margin-right: 20px;                                   /* spacing for list items when horizontal */
+    text-align:left;
+    *display:inline;/* IE7 */
+    *zoom:1;
   }
   #sidebar {
     min-height: 500px;                                    /* assures it's always the same min height as content,
@@ -86,12 +100,26 @@ elements */
 @media (min-width: 750px) {
   #header {                                               /* resize header for tablet */
     background: url(../images/header-750.jpg) no-repeat center;
-    height: 348px;
+    height: 277px;
+  }
+  #nav {
+    background: url(../images/nav-750.jpg) no-repeat center;
+    height: 71px;
+  }
+  #nav ul {
+    margin-top: 0px;
   }
 }
 @media (min-width: 1000px) {
   #header {                                               /* resize header for desktop */
     background: url(../images/header-1000.jpg);
-    height: 556px;
+    height: 443px;
+  }
+  #nav {
+    background: url(../images/nav-1000.jpg);
+    height: 113px;
+  }
+  #nav ul {
+    margin-top: 60px;
   }
 }
