--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,13 @@
 
 body {
   background-color: green;                                /* basic colour for layout #testing */
+  font-family: "Verdana", sans-serif;
+  font-size: 1.6em;
+}
+
+h1,h2,h3,h4 {
+  font-family: "Georgia", serif;
+  font-weight: 100;
 }
 
 /* Classes and IDs - customisations for individual elements/groups of
@@ -33,30 +40,49 @@ elements */
                                                           navigation */
 }
 #header-title {                                           /* St. Andrew's Church text at top */
+  font-size: 3rem;
   margin-bottom: 0;                                       /* removes margin that skeleton.css adds to h1; this
                                                           allows other elements to be flush against it */
 }
 
 #nav {                                                    /* navigation links at top of each page */
+  background: #6f97bc;
   color: #fff;
   font-size: 1.75rem;
   text-align: center;
   width: 100%;                                            /* helps with centring navigation */
 }
 #nav ul {
-  margin: 0;                                              /* removes margin so aligns with bottom of box better */
+  margin: 20px 0 0 0;                                       /* removes margin so aligns with bottom of box better
+                                                          - keeps margin on top to space from other text*/
 }
 #nav ul li {
   display: block;                                         /* vertical list on mobile, changed to horizontal below */
+  font-size: 1.5rem;
 }
 #nav ul li:last-child {
   margin-right: 0;                                        /* prevents margin from throwing off last list item */
+}
+#nav p#left {                                             /* aligns nav text for diocese etc to the left and sizes
+                                                          down so it doesn't wrap too much on max res */
+  font-size: 1.0rem;
+  margin-bottom: 0;
+  margin-left: 0;
+  padding: 0;
+  text-align: center;
+}
+#nav p#right {                                            /* similar but for right hand address text */
+  font-size: 1.0rem;
+  margin-bottom: 0;
+  margin-right: 0;
+  padding: 0;
+  text-align: center;
 }
 #nav .centre {
   display: inline-block;                                  /* somehow causes nav to centre */
   *display: inline;                                       /* IE7 */
   *zoom: 1;
-  width: 80%;
+  width: 95%;
 }
 
 #sidebar {
@@ -73,12 +99,36 @@ elements */
     background: url(../images/header-550.jpg) no-repeat center;
     height: 255px;
   }
+  #header-title {
+    font-size: 3.5rem;
+  }
+
+  #nav ul {
+
+  }
   #nav ul li {
     display: inline-block;                                /* wraps with viewport size */
+    font-size: 1.5rem;
     margin-right: 20px;                                   /* spacing for list items when horizontal */
     text-align:left;
     *display:inline;/* IE7 */
     *zoom:1;
+
+  }
+  #nav p#left {                                             /* aligns nav text for diocese etc to the left and sizes
+                                                            down so it doesn't wrap too much on max res */
+    font-size: 1.5rem;
+    margin-bottom: 0;
+    margin-left: 20px;
+    padding: 0;
+    text-align: left;
+  }
+  #nav p#right {                                            /* similar but for right hand address text */
+    font-size: 1.5rem;
+    margin-bottom: 0;
+    margin-right: 20px;
+    padding: 0;
+    text-align: right;
   }
   #sidebar {
     min-height: 500px;                                    /* assures it's always the same min height as content,
@@ -102,12 +152,12 @@ elements */
     background: url(../images/header-750.jpg) no-repeat center;
     height: 277px;
   }
-  #nav {
-    background: url(../images/nav-750.jpg) no-repeat center;
-    height: 71px;
+  #header-title {
+    font-size: 4.5rem;
   }
+
   #nav ul {
-    margin-top: 0px;
+    margin-top: 20px;
   }
 }
 @media (min-width: 1000px) {
@@ -115,11 +165,16 @@ elements */
     background: url(../images/header-1000.jpg);
     height: 443px;
   }
+  #header-title {
+    font-size: 6rem;
+    margin-top: 40px;
+  }
+
   #nav {
     background: url(../images/nav-1000.jpg);
     height: 113px;
   }
   #nav ul {
-    margin-top: 60px;
+    margin-top: 30px;
   }
 }
