Links page done

--- a/css/style.css
+++ b/css/style.css
@@ -49,11 +49,11 @@ img.fluid {
 img.left {
   float: left;
 }
-img.link {
+img.link {                                                /* Link page image style to ensure it fits in table fine */
   height: auto;
   margin: 0;
   padding: 0;
-  width: 40px;
+  width: 100px;
 }
 img.right {
   float: right;
@@ -66,8 +66,9 @@ p.backtotop {
 
 }
 
-td.link-logo {
-  width: 40px;
+.link-logo {                                             /* Links page div style to make table cell fit logo image size */
+  margin: 0 auto;
+  width: 100px;
 }
 
 ul.nostyle {                                             /* removes styling from lists as needed */
